--- a/hr_leaves/templates/hr_leaves/demande.html
+++ b/hr_leaves/templates/hr_leaves/demande.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% load staticfiles %}
+{% load permission_tags %}
 
 {% block style %}
    <style type="text/css">
