--- a/hr_leaves/templates/hr_leaves/list_employees.html
+++ b/hr_leaves/templates/hr_leaves/list_employees.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% load permission_tags %}
 {% load staticfiles %}
 {% load lookup %}
 
@@ -26,6 +25,15 @@
   <h2 class="text-center">{% trans "list of employees" %}</h2>
 
   <div class="content">
+    {% if user.is_admin %}
+      <div>
+        <a class="btn btn-success btn-lg" href="{% url 'register' %}">
+          <span class="glyphicon glyphicon-pencil"></span>
+          {% trans "Add new Employee" %}
+        </a>
+      </div>
+      <br/>
+    {% endif %}
     <table class="table table-striped table-bordered" cellspacing="0" width="100%" id="datatable">
       <thead>
         <tr>
@@ -33,7 +41,7 @@
           <th>{% trans "First Name" %}</th>
           <th>{% trans "Last Name" %}</th>
           <th>{% trans "Email" %}</th>
-          <th>{% trans "View" %}</th>
+          <th>{% trans "Actions" %}</th>
         </tr>
       </thead>
       <tbody>
@@ -43,7 +51,17 @@
                 <td>{{ user.first_name }}</td>
                 <td>{{ user.last_name }}</td>
                 <td>{{ user.email }}</td>
-                <td><a href="{% url 'employe_details' user.id %}">View</a></td>
+                <td>
+                    <a href="{% url 'employe_details' user.id %}">
+                      <span class="glyphicon glyphicon-eye-open"></span>
+                    </a>
+            
+                    <a href="{% url 'update_employe' user.id %}" >
+                      <span class="glyphicon glyphicon-edit"></span>
+                    </a>
+                    
+                      </div>
+                </td>
               </tr>
         {% endfor %}
       </tbody>
