--- a/hr_leaves/templates/hr_leaves/login.html
+++ b/hr_leaves/templates/hr_leaves/login.html
@@ -8,31 +8,17 @@
 	 h3 {
 	   text-align: center;
 	 }
-	 
-	 .titre h2 {
-		padding: 0;
-		margin: 0;
-	 }
-	 
+	
 	 .titre h2 {
 		padding-top: 1%;
 		font-size: 9vh;
 		padding-bottom: 1%;
+		color: #104e85
 	 }
 	 .p-tag {
 			margin: -20px 0 10px;
-			font-style: italic;
-			font-weight: bold;
-	 }
-	 .text-center {
 			font-weight: normal;
 	 }
-	 
-   	 #_login {
-				color: #337ab7;
-				font-size: 4vh;
-   	 }
-
 	 .reset {
 				font-size: 2.5vh;
 	 }
@@ -42,9 +28,7 @@
 
 	#form .well {
 		background: rgba(232 , 233, 233, 0.7);
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
+		background-size: cover;
 		margin-top: 1%;
 		width: 60vh;
 		margin: auto;
@@ -91,9 +75,6 @@
 		font-size: 6vh !important;
 	 }
 	 
-	 label{
-		display: none;
-	 }
 	 legend{
 		font: 4.9vh bold;
 		text-align: center;
@@ -146,21 +127,22 @@
 		padding: 9px 0;
 		opacity: 0.5;
 	}
+	#login_fixed_container{
+		z-index: 0;
+		position: absolute;
+		top:15%;
+		left:33%
+	}
    </style>
 {% endblock %}
 
 {% block content %}
-{% if user.is_authenticated == False %}
-  <div class="logo row text-center">
-		<h2>{% trans "" %}</h2>
-		<p>{% trans "" %}</p>
-		<div class=""></div>
-		<h1>{% trans "" %}</h1>
-  </div>
 
-  <div class="row text-center">
+{% if user.is_authenticated == False %}
+ <div id='login_fixed_container'>
+	<div class="row text-center">
     <div class="col-md-12 titre">
-			<p><h2>{% trans "RH LEAVES" %}</h2></p>
+			<p><h2>{% trans "HR LEAVE" %}</h2></p>
 			<p class="p-tag">({% trans "Employe leaves management" %})</p>
 		</div>
   </div>
@@ -168,11 +150,24 @@
   <div class="row" id="form">
       <div class="well">
         {% crispy form %}
-   </div>
+   		</div>
   </div>
 	<p class="text-center"><strong class="reset">{% trans "Forget your password? " %}<a href="{% url 'password_reset' %}" class="reset-link">{% trans "reset" %}</a></strong></p>
-{% else %}
-	 <p>{% trans "You are connected" %}</p>
-		<a href="{% url 'acceuil' %}"><button type="button" class="btn btn-sucess btn-lg"><span class="glyphicon glyphicon-"></span>{% trans "Back to home" %}</button><a>
+</div>
+	{% else %}
+		<div class="row text-center">
+				<p>{% trans "You are connected" %}</p>
+				<a href="{% url 'acceuil' %}">
+						<button type="button" class="btn btn-sucess btn-lg">
+								<span class="glyphicon glyphicon"></span>{% trans "Click here to go back to home" %}
+						</button>
+				</a>
+				<a href="{% url 'logout' %}">
+								<button type="button" class="btn btn-alert btn-lg">
+										<span class="glyphicon glyphicon"></span>{% trans "Click here to Logout" %}
+								</button>
+						</a>  
+		</div>
 {% endif %}
+
 {% endblock content %}
