--- a/hr_leaves/templates/base.html
+++ b/hr_leaves/templates/base.html
@@ -138,8 +138,9 @@
 			color: #FFFFFF;
 			font-weight: bold;
 		}
-		.navbar-brand {
-			padding: 3px 15px;
+		.navbar-inverse .navbar-brand {
+			color: #fff;
+			font-size: 25px;
 		}
 		.reset_password {
 			font-size: 15px;
@@ -148,7 +149,6 @@
 		.text-left {
 			color: #337ab7;
 			font-size: 16px;
-			text-align: center;
 		}
 		#logout {
 			background-color: #c12e2a;
@@ -166,6 +166,25 @@
 			padding: 10px;
 			padding-bottom: 0px;
 		}
+		.navbar-inverse .navbar-nav>li>a {
+			color: #fff;
+		}
+		.navbar-inverse .navbar-nav>li>a:hover,
+		.navbar-inverse .navbar-nav>li>a:active {
+			-webkit-box-shadow: inset 0 3px 9px rgba(0,0,0,.25);
+    		box-shadow: inset 0 3px 9px rgba(0,0,0,.25);
+		}
+
+		.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.open>a {
+    background-image: -webkit-linear-gradient(top,#337ab7 0,#337ab7 100%);
+    background-image: -o-linear-gradient(top,#337ab7 0,#337ab7 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#337ab7),to(#337ab7));
+    background-image: linear-gradient(to bottom,#337ab7 0,#337ab7 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#337ab7', endColorstr='#337ab7', GradientType=0);
+    background-repeat: repeat-x;
+    -webkit-box-shadow: inset 0 3px 9px rgba(0,0,0,.25);
+    box-shadow: inset 0 3px 9px rgba(0,0,0,.25);
+}
 		.navbar-login-session
 		{
 			padding: 10px;
